# SDC-Loss

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: toy_dicece.yaml  toy_ecp.yaml  toy_fcl.yaml  toy_fl.yaml  toy_ls.yaml  toy_mbls.yaml  toy_nacl.yaml  toy_sdc.yaml  toy_svls.yaml
data/toy/test/: test_000.npz  test_001.npz  test_002.npz  test_003.npz
data/toy/train/: train_000.npz  train_001.npz  train_002.npz  train_003.npz  train_004.npz  train_005.npz  train_006.npz  train_007.npz  train_008.npz  train_009.npz  train_010.npz  train_011.npz  train_012.npz  train_013.npz  train_014.npz  train_015.npz
data/toy/val/: val_000.npz  val_001.npz  val_002.npz  val_003.npz
scripts/: make_toy_data.py
src/sdc/: config.py  data.py  eval.py  infer.py  losses.py  metrics.py  models.py  sam.py  sdf.py  train.py  utils.py
